--- a/src/components/image-slider/styles.css
+++ b/src/components/image-slider/styles.css
@@ -48,3 +48,11 @@
     margin: 0 0.2rem;
     cursor: pointer;
 }
+
+.hide-current-image{
+    display: none;
+}
+
+.inactive-indicator {
+    background-color: gray;
+}
