11-custom-modal-popup completed

--- a/src/components/08-lght-dark-mode.jsx/theme.css
+++ b/src/components/08-lght-dark-mode.jsx/theme.css
@@ -32,7 +32,7 @@ p {
     color: var(---text-primay);
 }
 
-button {
+btn {
     color: var(---button-text);
     background: var(---button-bg);
     border: none;
