--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
-
-* {
-    margin: 0;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
+/* 
+.App {
+    padding: 20px;
+    text-align: center;
+}
+
+.title {
+    margin-bottom: 20px;
+} */
