18-digital-clock completed

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
-/* 
+
 .App {
     padding: 20px;
     text-align: center;
@@ -11,4 +11,4 @@
 
 .title {
     margin-bottom: 20px;
-} */
+}
