--- a/src/components/08-light-dark-mode.jsx/theme.css
+++ b/src/components/08-light-dark-mode.jsx/theme.css
@@ -12,6 +12,9 @@
     ---button-text: #000;
 }
 
+.m-t {
+    margin-top: 100px;
+}
 .light-dark-mode{
     background-color: var(---background);
     height: 100vh;
