--- a/src/components/10-custom-tabs/tabs.css
+++ b/src/components/10-custom-tabs/tabs.css
@@ -1,6 +1,7 @@
 
 .wrapper {
     padding: 8px;
+    margin-top: 100px;
 }
 
 .heading{
@@ -23,7 +24,7 @@
 
 .tab-item.active {
     border-color: #000;
-    background: #a1d600;
+    background: #026970;
     color: #fff;
 }
 
