--- a/src/components/21-Random-Qoute-Generator/quote.css
+++ b/src/components/21-Random-Qoute-Generator/quote.css
@@ -36,4 +36,9 @@
     border: none;
     font-weight: bold;
     border-radius: 10px;
+    transition: 100ms;
+}
+
+.refesh-btn:hover{
+    background-color: #99e910;
 }
